[package]
name = "vivs-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = "1.38.1"
vivs = { path = "../../exploring_rust/cargo-projects/vivs" }
